Captcha Code Logic

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -98,6 +98,13 @@
             width: 40%;
             border:1px solid #777;
             border-radius: 2px;            
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            letter-spacing: 4px;
+            font-size: 18px;
+            color: rgb(18, 104, 18);
+            font-weight: 500;
         }
 
         .container .captcha-container .refreshCaptcha{
@@ -141,17 +148,17 @@
                 <a href="">Forget Password?</a>
            </div>
 
-            <!-- <div class="captcha-container">
+            <div class="captcha-container">
                     <div class="displayCaptcha"></div>
-                    <div class="refreshCaptcha">
-                        <i class="bi bi-arrow-clockwise"></i>
+                    <div  class="refreshCaptcha animate__animated">
+                        <i class="bi bi-arrow-clockwise" ></i>
                     </div>
                     <input type="text" name="captcha-code" placeholder="Enter Captcha" required>
-            </div> -->
-<!-- 
+            </div>
+
             <p class="checkbox-container">
                 <input type="checkbox" required> <span>Do you agree with out <a href="">Terms & condition</a>.</span>
-            </p> -->
+            </p>
 
             <button type="submit">Login</button>
             <button type="reset">Cancel</button>
