--- a/Frontend/home.html
+++ b/Frontend/home.html
@@ -89,7 +89,7 @@
         <div class="center">
             <div class="logo">LOGO</div>
             <nav>
-                <button>Logout</button>
+                <button class="logoutBtn">Logout</button>
                 <button>
                     <i class="bi bi-bag-check-fill"></i>
                 </button>
