--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -72,7 +72,7 @@
     </div>
     <script>
         setTimeout(() => {
-            window.location.href="login.html"
+            window.location.href="UI/login.html"
         }, 1100);
     </script>
 </body>
