--- a/Frontend/UI/forgetPassword.html
+++ b/Frontend/UI/forgetPassword.html
@@ -108,7 +108,7 @@
        <h2>Forgot Password - Email Verification</h2>
       <form id="emailVerificationForm">
         <label for="email">Enter your registered email address:</label><br />
-        <input type="email" id="email" name="email" required /><br /><br />
+        <input type="email" id="email" name="email" placeholder="enter email" required /><br /><br />
         <button type="submit" id="sendVerification">Verify Email</button>
       </form>
 
@@ -117,9 +117,20 @@
       <form id="otpVerificationForm" style="display:none;">
         <label for="otp">Enter OTP:</label><br />
         <input type="text" id="otpInput" name="otp" maxlength="6" required /><br /><br />
-        <span id="timer">02:00</span><br /><br />
+        <span id="timer"></span><br /><br />
         <button type="submit" id="confirmOtpBtn">Confirm OTP</button>
         <button type="button" id="resendOtpBtn" disabled>Resend OTP</button>
+      </form>
+
+
+      <form id="resetPasswordForm" style="display:none; flex-direction: column; gap: 1rem;">
+        <label for="newPassword">New Password:</label>
+        <input type="password" id="newPassword" name="newPassword" required minlength="6" />
+
+        <label for="confirmPassword">Confirm Password:</label>
+        <input type="password" id="confirmPassword" name="confirmPassword" required minlength="6" />
+
+        <button type="submit" id="resetPasswordBtn">Reset Password</button>
       </form>
    </div>
 
